--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "fs-extra": "^9.0.0",
     "giphy-js-sdk-core": "^1.0.6",
     "hastebin": "^0.2.1",
+    "node-wit": "^5.0.0",
     "opusscript": "0.0.7",
     "pug": "^2.0.4",
     "request": "^2.81.0",
