--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "fs-extra": "^9.0.0",
     "giphy-js-sdk-core": "^1.0.6",
     "hastebin": "^0.2.1",
+    "node-red-contrib-google-tts": "^1.1.1",
     "node-wit": "^5.0.0",
     "opusscript": "0.0.7",
     "pug": "^2.0.4",
     "request": "^2.81.0",
     "sanitize-html": "^1.21.1",
+    "say": "^0.16.0",
     "url": "^0.11.0",
     "valid-url": "^1.0.9",
     "youtube-info": "^1.3.2",
