--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node startbot.js",
-    "startweb": "node server.js"
+    "startweb": "node server/server.js"
   },
   "repository": {
     "type": "git",
