--- a/package.json
+++ b/package.json
@@ -35,8 +35,11 @@
     "fs-extra": "^9.0.0",
     "giphy-js-sdk-core": "^1.0.6",
     "hastebin": "^0.2.1",
+    "mathjs": "^7.0.1",
+    "node-ejs": "^1.2.3",
     "node-red-contrib-google-tts": "^1.1.1",
     "node-wit": "^5.0.0",
+    "oauth2-server": "^3.0.2",
     "opusscript": "0.0.7",
     "pug": "^2.0.4",
     "request": "^2.81.0",
