Changed testing prefix

--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
     "week_dayChannel": "661698831859318805",
 
     "prefix": "+",
+    "testingPrefix": "_",
     "token": "NjU2NTkzNzkwMTc3NjQwNDQ4.Xn3sSw.ydaOlLWFEOj-YXU11co59JxbGEk",
     "testtoken": "NzAyODM4MTM0NzY4OTI2Nzkw.XqSIpQ.bxnlv88c-lzIHDMV1mZsBeN-tD8",
     "giphyToken": "cQYqRvbGsQexf4D6I6vWWQVzLtHCXeGo",
