--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "base-64": "^0.1.0",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
+    "cryptiles": "^4.1.3",
     "discord.js": "^11.5.1",
     "eslint": "^6.7.2",
     "express": "^4.17.1",
@@ -38,6 +39,7 @@
     "fs-extra": "^9.0.0",
     "giphy-js-sdk-core": "^1.0.6",
     "hastebin": "^0.2.1",
+    "hoek": "^6.1.3",
     "mathjs": "^7.0.1",
     "node-ejs": "^1.2.3",
     "node-red-contrib-google-tts": "^1.1.1",
