--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cheerio": "^1.0.0-rc.3",
     "cryptiles": "^4.1.3",
     "discord.js": "^11.5.1",
+    "enmap": "^5.3.1",
     "eslint": "^6.7.2",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
